# software-renderer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: camera.h  common.h  font.h  framebuffer.h  graphics.h  renderer.h  vec.h  vector.h  wavefront_obj.h
src/: main.c
